@@ -415,10 +415,12 @@ local config = {
     section_order = {
       'editorconfig.lua',
       'tohtml.lua',
+      'undotree.lua',
     },
     files = {
       'runtime/lua/editorconfig.lua',
       'runtime/lua/tohtml.lua',
+      'runtime/pack/dist/opt/nvim.undotree/lua/undotree.lua',
     },
     fn_xform = function(fun)
       if fun.module == 'editorconfig' then
